--- a/src/components/pages/reservation/ReservationDetailsPage.css
+++ b/src/components/pages/reservation/ReservationDetailsPage.css
@@ -82,7 +82,7 @@
     color: #fff;
   }
   
-  .proceed-button {
+  .toggle-additional-options {
     background-color: #b6dee7;
     color: #28292f;
     border: none;
@@ -92,7 +92,28 @@
     border-radius: 50px;
     transition: all 0.3s ease;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
+    margin-top: 10px;
+    width: 100%;
+    text-align: left;
+  }
+  
+  .toggle-additional-options:hover {
+    background-color: #387b9f;
+    color: #fff;
+  }
+  
+  .proceed-button {
+    background-color: #b6dee7;
+    color: #28292f;
+    border: none;
+    padding: 15px 30px; /* Powiększenie przycisku */
+    font-size: 1.25rem;
+    font-weight: bold;
+    border-radius: 50px;
+    transition: all 0.3s ease;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    margin-top: 50px; /* Powiększenie odstępu od stopki */
+    margin-bottom: 50px; /* Dodanie marginesu dolnego */
   }
   
   .proceed-button:hover {
