--- a/src/components/pages/reservation/ReservationDetailsPage.css
+++ b/src/components/pages/reservation/ReservationDetailsPage.css
@@ -46,40 +46,46 @@
     font-weight: bold;
     color: #387b9f;
     margin-bottom: 15px;
+    text-align: center;
   }
   
   .reservation-details-page .additional-services .service-option {
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding: 15px;
+    border: 1px solid #e1e1e1;
+    border-radius: 4px;
+    text-align: center;
   }
   
   .reservation-details-page .additional-services .service-option p {
     font-size: 1rem;
     color: #555;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   
   .reservation-details-page .additional-services .service-option .service-price {
     font-size: 1.2rem;
     font-weight: bold;
     color: #333;
-    margin-top: 10px;
+    margin-top: auto; /* Wyrównanie ceny do dołu */
   }
   
-  .reservation-details-page .additional-services .service-option .service-button {
-    background-color: #b6dee7;
-    color: #28292f;
-    border: none;
-    padding: 10px 20px;
-    font-size: 1rem;
-    font-weight: bold;
-    border-radius: 50px;
-    transition: all 0.3s ease;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    margin-top: 10px;
-  }
-  
-  .reservation-details-page .additional-services .service-option .service-button:hover {
+  .reservation-details-page .additional-services .service-option.selected {
     background-color: #387b9f;
-    color: #fff;
+    color: white;
+  }
+  
+  .reservation-details-page .additional-services .service-option.selected p,
+  .reservation-details-page .additional-services .service-option.selected .service-price,
+  .reservation-details-page .additional-services .service-option.selected strong {
+    color: white;
   }
   
   .toggle-additional-options {
