--- a/src/components/pages/reservation/ReservationDetailsPage.css
+++ b/src/components/pages/reservation/ReservationDetailsPage.css
@@ -21,7 +21,7 @@
   
   .reservation-details-page .reservation-summary h5,
   .reservation-details-page .car-info h5 {
-    font-size: 1.25rem;
+    font-size: 1.5rem; /* Powiększenie czcionki */
     font-weight: bold;
     color: #387b9f;
     margin-bottom: 15px;
@@ -29,9 +29,13 @@
   
   .reservation-details-page .reservation-summary p,
   .reservation-details-page .car-info p {
-    font-size: 1rem;
+    font-size: 1.25rem; /* Powiększenie czcionki */
     color: #555;
     margin-bottom: 10px;
+  }
+  
+  .services-section {
+    margin-top: 40px; /* Zwiększenie odległości między kartą samochodu a sekcją usług */
   }
   
   .reservation-details-page .additional-services {
@@ -145,7 +149,7 @@
     display: flex;
     align-items: center;
     padding-left: 15px; /* Dostosowanie przesunięcia dla checkboxa */
-    margin-top: 10px; /* Zwiększenie odległości między akordeonem a opcjami */
+    margin-top: 20px; /* Zwiększenie odległości między akordeonem a opcjami */
   }
   
   .form-check-item {
